[gd_scene load_steps=2 format=3 uid="uid://ccci30e1kkk8x"]

[ext_resource type="Script" uid="uid://bw25rwp816p1a" path="res://src/levels/digit.gd" id="1_sosgt"]

[node name="Digit" type="Panel"]
offset_right = 88.0
offset_bottom = 96.0
script = ExtResource("1_sosgt")
metadata/_edit_group_ = true

[node name="LabelDigit" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_right = 80.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Plus" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 40.0
offset_bottom = 88.0
text = "+"

[node name="Minus" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 56.0
offset_right = 80.0
offset_bottom = 88.0
text = "-"

[connection signal="pressed" from="Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_minus_pressed"]
